@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: misc.test,v 1.7 2003/11/14 23:21:02 dkf Exp $
+# RCS: @(#) $Id: misc.test,v 1.8 2004/06/24 10:34:12 dkf Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -67,7 +67,8 @@ missing close-brace for variable name
 "tstProc"}]
 
 for {set i 1} {$i<300} {incr i} {
-    test misc-2.$i {hash table with sys-alloc} "testhashsystemhash $i" OK
+    test misc-2.$i {hash table with sys-alloc} testhashsystemhash \
+	    "testhashsystemhash $i" OK
 }
 
 # cleanup
