@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: unixNotfy.test,v 1.16 2004/06/23 15:36:58 dkf Exp $
+# RCS: @(#) $Id: unixNotfy.test,v 1.17 2004/06/24 10:34:12 dkf Exp $
 
 # The tests should not be run if you have a notifier which is unable to
 # detect infinite vwaits, as the tests below will hang. The presence of
@@ -24,47 +24,41 @@ if {[lsearch [namespace children] ::tcltest] == -1} {
 # When run in a Tk shell, these tests hang.
 testConstraint noTk       [expr {![info exists tk_version]}]
 testConstraint testthread [expr {[info commands testthread] != {}}]
+testConstraint unthreaded [expr {
+    ![info exist tcl_platform(threaded)] || !$tcl_platform(threaded)
+}]
 
 # The next two tests will hang if threads are enabled because the notifier
 # will not necessarily wait for ever in this case, so it does not generate
 # an error.
-
-test unixNotfy-1.1 {Tcl_DeleteFileHandler} \
-    -constraints {noTk && unix && !testthread} \
-    -body {
-	catch {vwait x}
-	set f [open [makeFile "" foo] w]
-	fileevent $f writable {set x 1}
-	vwait x
-	close $f
-	list [catch {vwait x} msg] $msg
-    } \
-    -result {1 {can't wait for variable "x":  would wait forever}} \
-    -cleanup { 
-	catch { close $f }
-	catch { removeFile foo }
-    }
-test unixNotfy-1.2 {Tcl_DeleteFileHandler} \
-    -constraints {noTk && unix && !testthread} \
-    -body {
-	catch {vwait x}
-	set f1 [open [makeFile "" foo] w]
-	set f2 [open [makeFile "" foo2] w]
-	fileevent $f1 writable {set x 1}
-	fileevent $f2 writable {set y 1}
-	vwait x
-	close $f1
-	vwait y
-	close $f2
-	list [catch {vwait x} msg] $msg
-    } \
-    -result {1 {can't wait for variable "x":  would wait forever}} \
-    -cleanup {
-	catch { close $f1 }
-	catch { close $f2 }
-	catch { removeFile foo }
-	catch { removeFile foo2 }
-    }
+test unixNotfy-1.1 {Tcl_DeleteFileHandler} -constraints {noTk unix unthreaded} -body {
+    catch {vwait x}
+    set f [open [makeFile "" foo] w]
+    fileevent $f writable {set x 1}
+    vwait x
+    close $f
+    list [catch {vwait x} msg] $msg
+} -result {1 {can't wait for variable "x":  would wait forever}} -cleanup { 
+    catch { close $f }
+    catch { removeFile foo }
+}
+test unixNotfy-1.2 {Tcl_DeleteFileHandler} -constraints {noTk unix unthreaded} -body {
+    catch {vwait x}
+    set f1 [open [makeFile "" foo] w]
+    set f2 [open [makeFile "" foo2] w]
+    fileevent $f1 writable {set x 1}
+    fileevent $f2 writable {set y 1}
+    vwait x
+    close $f1
+    vwait y
+    close $f2
+    list [catch {vwait x} msg] $msg
+} -result {1 {can't wait for variable "x":  would wait forever}} -cleanup {
+    catch { close $f1 }
+    catch { close $f2 }
+    catch { removeFile foo }
+    catch { removeFile foo2 }
+}
 
 test unixNotfy-2.1 {Tcl_DeleteFileHandler} \
     -constraints {noTk unix testthread} \
